--- a/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
@@ -35,8 +35,8 @@
 
 					<p>
 						Insert Data(Questionnaires will be accepted only for today at a
-						time after now)<input type="date" id="questionnaredate"
-							name="date" min="return dateValidation()" required>
+						time after now)<input type="date" id="questionnaireDate"
+							name="date" onchange="return dateValidation()" required>
 					</p>
 					<p id="questions">Questions List</p>
 					<button type="button" id="add">New Question</button>
@@ -102,17 +102,23 @@
 		}
 	}
 	function dateValidation(){
-		var d = new Date(date),
-        month = '' + (d.getMonth() + 1),
-        day = '' + d.getDate(),
-        year = d.getFullYear();
-
-    if (month.length < 2) 
-        month = '0' + month;
-    if (day.length < 2) 
-        day = '0' + day;
-
-    return [year, month, day].join('-');
+		var insertedDate = document.getElementById("questionnaireDate").value;
+		var d = new Date();
+	    month = parseInt(d.getMonth()+1);
+	    day = parseInt(d.getDate());
+	    year = parseInt(d.getFullYear());
+	    var parts = insertedDate.split("-");
+	    var insertedDay = parseInt(parts[2]);
+	    var insertedMonth = parseInt(parts[1]);
+	    var insertedYear = parseInt(parts[0]);
+	    var dateValid = false;
+	    if((insertedYear = year && ((insertedMonth = month && insertedDay >= day) || (insertedMonth > month))) || insertedYear > year){
+	    	dateValid = true;
+	    };
+	    if(!dateValid){
+	    	alert("The inserted date is not valid! \nThe date must be after today");
+	    	document.getElementById("questionnaireDate").value = "";
+	    }
 	}
 </script>
 </html>
