--- a/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
@@ -12,7 +12,8 @@
 			<div align="right">
 			    <a th:href="@{/Admin/Home}">Home</a> 
 				<a th:href="@{/Admin/CreateQuestionnaire}">Create Questionnaire</a> 
-				<a th:href="@{/Admin/DeleteQuestionnaire}">Delete Questionnaire</a> 
+				<a th:href="@{/Admin/DeleteQuestionnaire}">Delete Questionnaire</a>
+				<a th:href="@{/Admin/Inspection}">Inspect Questionnaire</a>
 				<a th:href="@{/App/Logout}">Logout</a>
 			</div>
 			<h1>List of questionnaires</h1>
