--- a/GMA_WEB/WebContent/WEB-INF/admin/adminPanel.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/adminPanel.html
@@ -13,6 +13,7 @@
 			    <a th:href="@{/Admin/Home}">Home</a> 
 				<a th:href="@{/Admin/CreateQuestionnaire}">Create Questionnaire</a> 
 				<a th:href="@{/Admin/DeleteQuestionnaire}">Delete Questionnaire</a> 
+				<a th:href="@{/Admin/Inspection}">Inspect Questionnaire</a> 
 				<a th:href="@{/App/Logout}">Logout</a>
 			</div>
 			<h1>Welcome admin!</h1>
