--- a/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
@@ -23,7 +23,7 @@
 	<section>
 		<div>
 			<form action="#" th:action="@{/Admin/InsertQuestionnaire}"
-				method="POST" >
+				method="POST" enctype="multipart/form-data">
 				<fieldset id="mandatory">
 					<p>
 						Image Name: <input type="text" id="Name" name="pictureName"
