--- a/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
@@ -29,7 +29,7 @@
 				    <th>Id</th>
 					<th>Product</th>
 					<th>Date</th>
-					<th>Product</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
