--- a/GMA_WEB/WebContent/WEB-INF/admin/inspectQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/inspectQuestionnaire.html
@@ -32,7 +32,7 @@
 			</thead>
 			<tbody>
 				<tr th:with="q = ${questionnaire}">
-					<td th:text="${questionnaire.id}"></td>
+					<td th:text="${q.id}"></td>
 					<td th:text="${q.product.name}"></td>
 					<td th:text="${#dates.format(q.date, 'yyyy-MM-dd')}"></td>
 				</tr>
