--- a/GMA_WEB/WebContent/WEB-INF/admin/inspectUserAnswers.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/inspectUserAnswers.html
@@ -35,7 +35,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:with="q : ${questionnaire}">
+				<tr th:with="q = ${questionnaire}">
 					<td th:text="${q.id}"></td>
 					<td th:text="${q.product.name}"></td>
 					<td th:text="${#dates.format(q.date, 'yyyy-MM-dd')}"></td>
@@ -51,7 +51,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:with="u : ${user}">
+				<tr th:with="u = ${user}">
 					<td th:text="${u.id}"></td>
 					<td th:text="${u.username}"></td>
 				</tr>
@@ -75,7 +75,7 @@
 			</table>
 		</div>
 
-		<div th:if="${questionnaires.isEmpty()}">
+		<div th:if="${questionnaire.isEmpty()}">
 			<p>There are no answers</p>
 		</div>
 	</section>
