--- a/GMA_WEB/WebContent/index.html
+++ b/GMA_WEB/WebContent/index.html
@@ -5,7 +5,7 @@
 <title>Login page</title>
 </head>
 <body>
-	<h1>Welcome to GMAO</h1>
+	<h1>Welcome to GMA</h1>
 
 	<form action="CheckLogin" method="POST">
 		Username: <input type="text" name="username" required> <br>
