--- a/GMA_WEB/WebContent/WEB-INF/admin/inspectUserAnswers.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/inspectUserAnswers.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<link rel="stylesheet" type="text/css" media="all"
+	href="../CSS/style.css" th:href="@{/css/style.css}" />
 <title>Inspect User Answers Page</title>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,10 +24,11 @@
 <body>
 	<section>
 		<p>
-			<a th:href="@{/Admin/InspectQuestionnaire(idQuestionnaire=${q.id})}">Go
+			<a
+				th:href="@{/Admin/InspectQuestionnaire(idQuestionnaire=${questionnaire.id})}">Go
 				Back</a>
 		</p>
-		<p>Questionnaire Selected</p>
+		<h4>Questionnaire Selected</h4>
 		<table>
 			<thead>
 				<tr>
@@ -42,7 +45,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<p>User Selected</p>
+		<h4>User Selected</h4>
 		<table>
 			<thead>
 				<tr>
@@ -57,8 +60,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<p>Answers</p>
 		<div th:if="${!answers.isEmpty()}">
+			<h4>Answers</h4>
 			<table>
 				<thead>
 					<tr>
@@ -75,8 +78,8 @@
 			</table>
 		</div>
 
-		<div th:if="${questionnaire.isEmpty()}">
-			<p>There are no answers</p>
+		<div th:if="${answers.isEmpty()}">
+			<h4>There are no answers</h4>
 		</div>
 	</section>
 </body>
