--- a/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
@@ -44,8 +44,7 @@
 					<button type="button" id="add">New Question</button>
 					<input type="hidden" id="counter" name="counter">
 				</fieldset>
-				<input type="hidden" name="SendQuestionnaire" id="SendQuestionnaire"
-					value="Submit">
+				<input type="hidden" name="SendQuestionnaire" id="SendQuestionnaire">
 				<p id="messageSubmit">At least one question is required</p>
 			</form>
 		</div>
