--- a/GMA_WEB/WebContent/WEB-INF/admin/inspectQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/inspectQuestionnaire.html
@@ -83,7 +83,7 @@
 		</div>
 
 		<div th:if="${cancellers.isEmpty()}">
-			<p>No user have delated the questionnaire!</p>
+			<p>No user have cancelled the questionnaire!</p>
 		</div>
 	</section>
 </body>
