--- a/GMA_WEB/WebContent/WEB-INF/leaderboard.html
+++ b/GMA_WEB/WebContent/WEB-INF/leaderboard.html
@@ -19,7 +19,7 @@
 	</section>
 
 	<section th:if="${statistics.isEmpty()}">
-	<p>There are no available statistics for the questionnaire of the day. Please, retry later!<p>
+	<p>There are no available statistics for today. Please, retry later!<p>
 	</section>
 
 	<section th:if="${!statistics.isEmpty()}">
